@@ -1,4 +1,8 @@
 2002-12-23  Daryl Lee <dol@sources.redhat.com>
+	* gnu/testlet/java/io/OutputStreamWriter/jdk11.java: New file.
+	Completes tests of OutputStreamWriter class
+
+2002-12-23  Daryl Lee <dol@sources.redhat.com>
 	* gnu/testlet/java/io/FilterOutputStream/write.java: New file.
 	These files complete direct tests of FilterOutputStream class
 
